sume variables listas las compile arregle un responisve

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             </h1>
 
-            <nav class="navbar navbar-expand-lg bg-light">
+            <nav class="exteriornav navbar navbar-expand-lg bg-light">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="index.html">Inicio</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -150,7 +150,7 @@
             </div>
 
             <div class="">
-                <p>Desarrollado por Marie Obando</p>
+                <p>Desarrollado por Marie Obando. Todos los derechos reservados. 2022</p>
             </div>
 
 
