--- a/info.html
+++ b/info.html
@@ -166,7 +166,7 @@
                 </div>
 
                 <div class="p-8">
-                    <p>Desarrollado por Marie Obando</p>
+                    <p>Desarrollado por Marie Obando. Todos los derechos reservados. 2022</p>
                 </div>
 
             </div>
