--- a/proyectos.html
+++ b/proyectos.html
@@ -65,16 +65,16 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link active" aria-current="page" href="Info.html">Info</a>
+                                <a class="nav-link active" aria-current="page" href="info.html">Info</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Proyectos.html">Proyectos</a>
+                                <a class="nav-link" href="proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Tienda.html">Tienda</a>
+                                <a class="nav-link" href="tienda.html">Tienda</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="Contacto.html">Contacto</a>
+                                <a class="nav-link" href="contacto.html">Contacto</a>
                             </li>
                         </ul>
                     </div>
