--- a/html-tienda-items/compra3.html
+++ b/html-tienda-items/compra3.html
@@ -64,7 +64,7 @@
             <ul class="navbar-nav">
 
               <li class="nav-item">
-                <a class="nav-link" href="../Tienda.html">Regresar a Tienda</a>
+                <a class="nav-link" href="../tienda.html">Regresar a Tienda</a>
               </li>
 
             </ul>
