--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                                 <a class="nav-link active" aria-current="page" href="info.html">Info</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/sections/proyectos.html">Proyectos</a>
+                                <a class="nav-link" href="proyectos.html">Proyectos</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link" href="tienda.html">Tienda</a>
