--- a/html-tienda-items/compra1.html
+++ b/html-tienda-items/compra1.html
@@ -119,7 +119,7 @@
 
       <div>
 
-        <a class="btn btn-primary" href="" role="button">Comprar</a>
+        <a class="btn btn-danger" href="" role="button">Comprar</a>
 
       </div>
 
