--- a/html-tienda-items/compra2.html
+++ b/html-tienda-items/compra2.html
@@ -117,7 +117,7 @@
 
       <div>
 
-        <a class="btn btn-primary" href="#" role="button">Comprar</a>
+        <a class="btn btn-danger" href="#" role="button">Comprar</a>
 
       </div>
 
