--- a/html-tienda-items/compra6.html
+++ b/html-tienda-items/compra6.html
@@ -118,7 +118,7 @@
 
       <div>
 
-        <a class="btn btn-primary" href="#" role="button">Comprar</a>
+        <a class="btn btn-danger" href="#" role="button">Comprar</a>
 
       </div>
 
