--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
+    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -31,7 +33,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-    <title>Marie Obando</title>
+    <title>Marie Obando | Portfolio de Arte y proyectos</title>
 
 
 </head>
