agregue favicon nuevamente cambie nombre de titulo por seccion agregue section suscripcion

--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-    <title>Marie Obando</title>
+    <title>Marie Obando | Contactarme</title>
+
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -199,6 +201,78 @@
         </div>
     
     </section>
+
+    <section>
+
+        <div class="suscripcion">
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="content">
+                        <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+                    <div class="input-group">
+                         <input type="email" class="form-control" placeholder="Ingresa tu email">
+                         <span class="input-group-btn">
+                         <button class="btn" type="submit">Suscribirme</button>
+                         </span>
+                          </div>
+                    </div>
+                </div>
+                </div>
+
+
+
+
+        </div>
+
+
+
+    </section>
+
+
+    <footer>
+
+
+
+        <div class="container text-center">
+            <div class="row animate__animated animate__fadeIn">
+                <div class="col">
+
+                    <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
+                        <img src="icons/instaicon.png" class="img-fluid" alt="instaiconlogo">
+
+                    </a>
+
+                </div>
+                <div class="col">
+
+
+                    <a href="https://www.facebook.com/MariemObando" target="_blank">
+                        <img src="icons/facebookicon.png" class="img-fluid" alt="facebookicon">
+                    </a>
+
+
+
+                </div>
+                <div class="col">
+
+
+                    <a href="https://www.artstation.com/marielinaobando/profile" target="_blank">
+                        <img src="icons/artsicon.png" class="img-fluid" alt="artstationicon">
+                    </a>
+
+                </div>
+
+            </div>
+
+            <div class="">
+                <p>Desarrollado por Marie Obando. Todos los derechos reservados. 2022</p>
+            </div>
+
+
+
+
+        </div>
 
 
 
