--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     <title>Marie Obando | Portfolio de Arte y proyectos</title>
 
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+
 
 </head>
 
@@ -113,15 +115,43 @@
     </section>
 
 
+    <section>
+
+        <div class="suscripcion animate__animated animate__fadeIn">
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="content">
+                        <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+                    <div class="input-group">
+                         <input type="email" class="form-control" placeholder="Ingresa tu email">
+                         <span class="input-group-btn">
+                         <button class="btn" type="submit">Suscribirme</button>
+                         </span>
+                          </div>
+                    </div>
+                </div>
+                </div>
+
+
+
+
+        </div>
+
+
 
     </section>
+
+    
+
+
 
     <footer>
 
 
 
         <div class="container text-center">
-            <div class="row">
+            <div class="row animate__animated animate__fadeIn">
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
