--- a/print.html
+++ b/print.html
@@ -37,6 +37,8 @@
 
   <title>Marie Obando / Print </title>
 
+  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+
 
 </head>
 
