--- a/proyectos.html
+++ b/proyectos.html
@@ -35,7 +35,9 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-    <title>Marie Obando</title>
+    <title>Marie Obando | Proyectos Obra</title>
+
+    <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -106,7 +108,7 @@
         <div class="container-fluid animate__animated animate__backInLeft">
             <div class="row">
                 <div class="column">
-                    <img src="pictures/img4.jpg" />
+                    <a href="item-galeria/obra1.html"><img src="pictures/img4.jpg" /></a>
                     <img src="pictures/img5.jpg" />
                     <img src="pictures/img7.jpg" />
                     <img src="pictures/img6.jpg" />
@@ -130,12 +132,39 @@
         
     </section>
 
+    <section>
+
+        <div class="suscripcion">
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="content">
+                        <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+                    <div class="input-group">
+                         <input type="email" class="form-control" placeholder="Ingresa tu email">
+                         <span class="input-group-btn">
+                         <button class="btn" type="submit">Suscribirme</button>
+                         </span>
+                          </div>
+                    </div>
+                </div>
+                </div>
+
+
+
+
+        </div>
+
+
+
+    </section>
+
     <footer>
 
 
 
         <div class="container text-center">
-            <div class="row">
+            <div class="row animate__animated animate__fadeIn">
                 <div class="col">
 
                     <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
