--- a/html-tienda-items/compra2.html
+++ b/html-tienda-items/compra2.html
@@ -34,6 +34,8 @@
 
   <title>Marie Obando / Tienda</title>
 
+  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+
 
 </head>
 
