--- a/item-galeria/obra6.html
+++ b/item-galeria/obra6.html
@@ -32,7 +32,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-  <title>Marie Obando / Tienda</title>
+  <title>Marie Obando | Obra</title>
 
   <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 
@@ -66,7 +66,7 @@
             <ul class="navbar-nav">
 
               <li class="nav-item">
-                <a class="nav-link" href="../tienda.html">Regresar a Tienda</a>
+                <a class="nav-link" href="../proyectos.html">Regresar a Galeria</a>
               </li>
 
             </ul>
@@ -87,7 +87,7 @@
 
   </section>
 
-  <section class="tienda-section">
+  <section class="obrasection">
 
 
 
@@ -95,18 +95,17 @@
 
       <div class="animate__animated animate__backInLeft">
 
-        <img src="../pictures/img3.jpg" class="img-fluid w-30" alt="Foto de tienda 1">
+        <img src="../pictures/img11.jpg" class="img-fluid w-30" alt="Foto de tienda 1">
 
 
       </div>
 
       
-
     </div>
 
     <div class="tiendatext animate__animated animate__zoomIn">
       <p>
-        Virus
+        Factory
       </p>
 
       <p> Dibujo intervenido digitalmente como collage. Impresión reproducción papel calidad museo.</p>
@@ -119,11 +118,7 @@
         2022
       </p>
 
-      <div>
-
-        <a class="btn btn-danger" href="#" role="button">Comprar</a>
-
-      </div>
+      
 
 
     </div>
