--- a/tienda.html
+++ b/tienda.html
@@ -37,6 +37,8 @@
 
   <title>Marie Obando / Tienda</title>
 
+  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+
 
 </head>
 
@@ -107,7 +109,7 @@
       </li>
       <!--
       <li class="storesubcontent">
-        <a href="original.html">Originales</a>
+        <a href="original.html">All</a>
       </li> -->
     </ul>
   </section>
@@ -177,10 +179,37 @@
 
   </section>
 
+  <section>
+
+    <div class="suscripcion">
+
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="content">
+                    <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+                <div class="input-group">
+                     <input type="email" class="form-control" placeholder="Ingresa tu email">
+                     <span class="input-group-btn">
+                     <button class="btn" type="submit">Suscribirme</button>
+                     </span>
+                      </div>
+                </div>
+            </div>
+            </div>
+
+
+
+
+    </div>
+
+
+
+</section>
+
   <footer>
 
     <div class="container text-center">
-      <div class="row">
+      <div class="row animate__animated animate__fadeIn">
         <div class="col">
 
           <a href="https://www.instagram.com/mariem_odoardi/" target="_blank">
