completando protocolo opengraph y seo completando galeria de proyectos

--- a/info.html
+++ b/info.html
@@ -6,10 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description"
-        content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
-    <meta name="keywords"
-        content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+    <meta name="description" content="Marie Biografia Statement artista dedicada al collage, la pintura y la ilustracion. Chequea su trabajo y ponte en contacto con ella.">
+
+    <!-- META KEYWORDS 18 PALABRAS -->
+
+    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+
+
+    <!-- PROTOCOLO OPEN GRAPH -->
+
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Marie Obando | Info Bio">
+    <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/index.html">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -37,7 +47,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-    <title>Marie Obando</title>
+    <title> Marie Obando | Info Bio </title>
 
     <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 
@@ -141,6 +151,57 @@
         </div>
 
 
+    </section>
+
+    <section class="statement">
+        <div>
+
+            <h2>ABOUT CONCEPTOS E IDEAS</h2>
+
+            <p>
+
+
+                Leo, escucho música, busco imágenes específicas, recolecto papeles, posters, fotografías; así empiezo a
+                dar cuerpo al conjunto de emociones, pensamientos e imágenes inundan mi mente en un momento determinado
+                inspiradas en dicha esta recolección y búsqueda personal.
+                Al realizar una pieza, esto puede implicar a veces una diferenciación en el cuerpo de obras. El collage
+                se ha hecho presente en mi trabajo desde hace años, pienso que me permite expresar de manera más cercana
+                y fiel las imágenes que proyecto internamente, la complejidad y la extrañeza del uno mismo y lo otro, e
+                igualmente la conexión que subyace para mí en toda la experiencia particular de vida. El dibujo también
+                ha pedido poco a poco mayor espacio e interactúa con el collage, lo complementa, lo completa, se opone a
+                él.
+
+
+            </p>
+
+
+            <p>
+
+                Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y tareas
+                específicas para proyectar una imagen que parece escrita en un gran guión, un gran acuerdo social, Cómo
+                es ser niña y cómo podía ser mujer, y cómo debe ser el pasaje entre un estado y el otro.
+                Cuando yo solo me preguntaba por Ser y lo que implicaba para mí esto me sentí increpada, avergonzada y
+                asustada de sentirme distinta a lo que se esperaba de mí. Es así como pienso en los diversos rituales y
+                ceremonias que cada sociedad y cada cultura en particular construye respecto a la identidad de las
+                mujeres como una cárcel. Y es que no hay una sola forma de ser mujer ni hay un número limitado de roles
+                que debamos cumplir, no hay formularios que llenar; más allá del género asignado al nacer, debemos ser
+                lo que necesitemos ser para nosotras o nosotres.
+
+            </p>
+
+            <p>
+
+                Ante la mirada de un sistema que sí, es patriarcal y sexista, que controla nuestros deseos, nuestros
+                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y decirle basta, un
+                fuck you. Y este dibujo intenta expresar la indignación de sentirme esta niña atrapada por todos estos
+                parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos mujer. No, nunca fui
+                menos mujer, fui yo, me construí en mi ser cada día y aprendí a leer que todo lo que intenté ser lo
+                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron presente…
+
+
+            </p>
+
+        </div>
     </section>
 
     <section>
