--- a/item-galeria/obra1.html
+++ b/item-galeria/obra1.html
@@ -34,7 +34,7 @@
 
   <title>Marie Obando | Obra</title>
 
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -95,14 +95,14 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img1.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img4.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
 
 
       </div>
 
       <div class="obratext animate__animated animate__zoomIn">
         <p>
-          The journey of the daughters
+          Hell is Here
         </p>
   
         <p> Dibujo intervenido digitalmente como collage.</p>
