--- a/item-galeria/obra3.html
+++ b/item-galeria/obra3.html
@@ -34,7 +34,7 @@
 
   <title>Marie Obando | </title>
 
-  <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="../icons/favicon.ico" type="image/x-icon">
 
 
 </head>
@@ -95,24 +95,24 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img1.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img7.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
 
 
       </div>
 
       <div class="obratext animate__animated animate__zoomIn">
         <p>
-          The journey of the daughters
+          Look
         </p>
   
-        <p> Dibujo intervenido digitalmente como collage.</p>
+        <p> Dibujo y collage sobre papel</p>
   
         <p>
           Tamaño A4
         </p>
   
         <p>
-          2022
+          2019
         </p>
         
       </div>
