--- a/item-galeria/obra9.html
+++ b/item-galeria/obra9.html
@@ -95,24 +95,24 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img1.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img13.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
 
 
       </div>
 
       <div class="obratext animate__animated animate__zoomIn">
         <p>
-          El viaje de las hijas
+          Hotel San Francisco
         </p>
   
-        <p> Dibujo intervenido digitalmente, collage digital</p>
+        <p> Dibujo  papel</p>
   
         <p>
-          Tamaño A4
+          Tamaño 15 x 15 cm
         </p>
   
         <p>
-          2022
+          2015
         </p>
         
       </div>
