--- a/proyectos.html
+++ b/proyectos.html
@@ -7,7 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
-    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+
+    <!-- META KEYWORDS 18 PALABRAS -->
+
+
+    <meta name="keywords" content="Arte, Argentina, Venezuela, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+
+
+    <!-- PROTOCOLO OPEN GRAPH -->
+
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Marie Obando | Galeria de proyectos">
+    <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/proyectos.html">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+
+
+
+
+    
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -109,21 +126,21 @@
             <div class="row">
                 <div class="column">
                     <a href="item-galeria/obra1.html"><img src="pictures/img4.jpg" /></a>
-                    <img src="pictures/img5.jpg" />
-                    <img src="pictures/img7.jpg" />
-                    <img src="pictures/img6.jpg" />
+                    <a href="item-galeria/obra2.html"><img src="pictures/img5.jpg" /></a>
+                    <a href="item-galeria/obra3.html"><img src="pictures/img7.jpg" /></a>
+                    <a href="item-galeria/obra4.html"><img src="pictures/img6.jpg" /></a>
 
                 </div>
                 <div class="column">
-                    <img src="pictures/img1.jpg">
-                    <img src="pictures/img3.jpg">
-                    <img src="pictures/img12.jpg" />
+                    <a href="item-galeria/obra5.html"><img src="pictures/img1.jpg"></a>
+                    <a href="item-galeria/obra6.html"><img src="pictures/img3.jpg"></a>
+                    <a href="item-galeria/obra7.html"><img src="pictures/img12.jpg" /></a>
 
                 </div>
                 <div class="column">
-                    <img src="pictures/img11.jpg" />
-                    <img src="pictures/img13.jpg" />
-                    <img src="pictures/img8.jpg" />
+                    <a href="item-galeria/obra8.html"><img src="pictures/img11.jpg" /></a>
+                    <a href="item-galeria/obra9.html"><img src="pictures/img13.jpg" /></a>
+                    <a href="item-galeria/obra10.html"><img src="pictures/img8.jpg" /></a>
 
                 </div>
             </div>
