--- a/contacto.html
+++ b/contacto.html
@@ -7,7 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <meta name="description" content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
-    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+
+    <!-- META KEYWORDS 18 PALABRAS -->
+
+    <meta name="keywords" content="Arte, contacto, redes, ilustraciones, email, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, comisiones, galeria, proyectos">
+
+
+    <!-- PROTOCOLO OPEN GRAPH -->
+
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Marie Obando | Contacto Mail Redes">
+    <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/index.html">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+
+
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
