--- a/index.html
+++ b/index.html
@@ -5,8 +5,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
-    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+    <meta name="description" content="Portfolio Marie es una artista venezolana que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
+
+    <!-- META KEYWORDS 18 PALABRAS minimo -->
+    <meta name="keywords" content="Arte, Argentina, Venezuela, ilustraciones, Concept, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+
+    <!-- PROTOCOLO OPEN GRAPH -->
+
+    <meta property="og:type" content="Web site">
+    <meta property="og:title" content="Marie Obando | Portfolio de Arte y proyectos">
+    <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/index.html">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
