--- a/item-galeria/obra8.html
+++ b/item-galeria/obra8.html
@@ -95,24 +95,24 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img1.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img11.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
 
 
       </div>
 
       <div class="obratext animate__animated animate__zoomIn">
         <p>
-          El viaje de las hijas
+            Fábrica
         </p>
   
-        <p> Dibujo intervenido digitalmente, collage digital</p>
+        <p> Dibujo y collage sobre papel</p>
   
         <p>
           Tamaño A4
         </p>
   
         <p>
-          2022
+          2020
         </p>
         
       </div>
