--- a/tienda.html
+++ b/tienda.html
@@ -6,10 +6,25 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
-    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+  <meta name="description" content="Entra en la tienda y chequea los prints y originales de arte e ilustraciones collage, la pintura.">
+
+  <!-- META KEYWORDS 18 PALABRAS -->
+
+  <meta name="keywords" content="arte, Argentina, Venezuela, ilustraciones, Tienda, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, compra, pagos, obras">
+
+
+  <!-- PROTOCOLO OPEN GRAPH -->
+
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Marie Obando | Tienda Prints Originales">
+  <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/tienda.html">
+  <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+
+
 
   <!-- CSS only -->
+
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
@@ -35,7 +50,7 @@
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-  <title>Marie Obando / Tienda</title>
+  <title>Marie Obando | Tienda</title>
 
   <link rel="shortcut icon" href="icons/favicon.ico" type="image/x-icon">
 
@@ -54,7 +69,7 @@
       <h1 class="animate__animated animate__fadeInRight">
 
 
-        MARIE OBANDO / 
+        MARIE OBANDO /
 
 
 
@@ -183,19 +198,19 @@
 
     <div class="suscripcion">
 
-        <div class="row">
-            <div class="col-sm-12">
-                <div class="content">
-                    <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
-                <div class="input-group">
-                     <input type="email" class="form-control" placeholder="Ingresa tu email">
-                     <span class="input-group-btn">
-                     <button class="btn" type="submit">Suscribirme</button>
-                     </span>
-                      </div>
-                </div>
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="content">
+            <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+            <div class="input-group">
+              <input type="email" class="form-control" placeholder="Ingresa tu email">
+              <span class="input-group-btn">
+                <button class="btn" type="submit">Suscribirme</button>
+              </span>
             </div>
-            </div>
+          </div>
+        </div>
+      </div>
 
 
 
@@ -204,7 +219,7 @@
 
 
 
-</section>
+  </section>
 
   <footer>
 
