--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Marie Obando | Portfolio de Arte y proyectos">
     <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/index.html">
-    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/pictures/img4.jpg">
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -108,7 +108,7 @@
 
         <div>
             <img src="pictures/imgindex2.png" class="img-fluid animate__animated animate__zoomIn"
-                alt="imagen cover index collage">
+                alt="imagen cover index collage mujeres caminando">
         </div>
 
     </section>
