--- a/info.html
+++ b/info.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Marie Obando | Info Bio">
     <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/index.html">
-    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/pictures/img4.jpg">
 
 
     <!-- CSS only -->
@@ -122,7 +122,7 @@
 
 
         <div class="containerfoto">
-            <img src="pictures/infoimg.jpeg" class="img-fluid w-30" alt="Foto de perfil">
+            <img src="pictures/infoimg.jpeg" class="img-fluid w-30" alt="Foto de perfil Marie Obando">
         </div>
 
         <div class="infotext animate__animated animate__zoomIn">
