--- a/item-galeria/obra1.html
+++ b/item-galeria/obra1.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img4.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img4.jpg" class="img-fluid w-10" alt="Foto de obra 1 collage hell is here">
 
 
       </div>
