--- a/proyectos.html
+++ b/proyectos.html
@@ -19,7 +19,7 @@
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Marie Obando | Galeria de proyectos">
     <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/proyectos.html">
-    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/pictures/img4.jpg">
 
 
 
