--- a/tienda.html
+++ b/tienda.html
@@ -18,7 +18,7 @@
   <meta property="og:type" content="Web site">
   <meta property="og:title" content="Marie Obando | Tienda Prints Originales">
   <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/tienda.html">
-  <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+  <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/pictures/img4.jpg">
 
 
 
@@ -134,7 +134,7 @@
 
     <div class="tiendawrapimagenes d-flex flex-row justify-content-evenly p-4 container-fluid">
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img1.jpg" class="card-img-top" alt="...">
+        <img src="pictures/img1.jpg" class="card-img-top" alt="Journey of the Daughters- Print-">
         <div class="card-body">
           <h5 class="card-title">Journey of the Daughters- Print- $ 1800 ARS</h5>
           <a href="html-tienda-items/compra1.html" class="btn btn-danger">Detalles</a>
@@ -142,7 +142,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img13.jpg" class="card-img-top" alt="...">
+        <img src="pictures/img13.jpg" class="card-img-top" alt="Hotel San Francisco-Print-">
         <div class="card-body">
           <h5 class="card-title"> Hotel San Francisco-Print- $ 1600 ARS</h5>
           <a href="html-tienda-items/compra2.html" class="btn btn-danger">Detalles</a>
@@ -150,7 +150,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img12.jpg" class="card-img-top" alt="...">
+        <img src="pictures/img12.jpg" class="card-img-top" alt="Casa de Hacienda-Print-">
         <div class="card-body">
           <h5 class="card-title">Casa de Hacienda-Print- $ 1600 ARS</h5>
           <a href="html-tienda-items/compra3.html" class="btn btn-danger">Detalles</a>
@@ -163,7 +163,7 @@
 
       <div class="card" style="width: 18rem;">
 
-        <img src="pictures/img3.jpg" class="card-img-top" alt="...">
+        <img src="pictures/img3.jpg" class="card-img-top" alt="Virus-Print-">
         <div class="card-body">
           <h5 class="card-title">Virus-Print- $ 1800 ARS</h5>
           <a href="html-tienda-items/compra4.html" class="btn btn-danger">Detalles</a>
@@ -171,7 +171,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img4.jpg" class="card-img-top" alt="...">
+        <img src="pictures/img4.jpg" class="card-img-top" alt="Hell is here-Print-">
         <div class="card-body">
           <h5 class="card-title">Hell is here-Print- $ 1800 ARS</h5>
           <a href="html-tienda-items/compra5.html" class="btn btn-danger">Detalles</a>
@@ -179,7 +179,7 @@
       </div>
 
       <div class="card" style="width: 18rem;">
-        <img src="pictures/img11.jpg" class="card-img-top" alt="...">
+        <img src="pictures/img11.jpg" class="card-img-top" alt="Factory-Print-">
         <div class="card-body">
           <h5 class="card-title">Factory-Print- $ 1800 ARS</h5>
           <a href="html-tienda-items/compra6.html" class="btn btn-danger">Detalles</a>
