--- a/contacto.html
+++ b/contacto.html
@@ -18,7 +18,7 @@
     <meta property="og:type" content="Web site">
     <meta property="og:title" content="Marie Obando | Contacto Mail Redes">
     <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/index.html">
-    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/item-galeria">
+    <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/pictures/img4.jpg">
 
 
 
