--- a/html-tienda-items/compra6.html
+++ b/html-tienda-items/compra6.html
@@ -6,6 +6,21 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+  <meta name="description" content="Entra en la tienda y chequea los prints y originales de arte e ilustraciones collage, la pintura.">
+
+  <!-- META KEYWORDS 18 PALABRAS -->
+
+  <meta name="keywords" content="arte, Argentina, Venezuela, ilustraciones, Tienda, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, compra, pagos, obras">
+
+
+  <!-- PROTOCOLO OPEN GRAPH -->
+
+  <meta property="og:type" content="Web site">
+  <meta property="og:title" content="Marie Obando | Tienda Prints Originales">
+  <meta property="og:url" content="https://marieobando.github.io/portfoliomarie-3/tienda.html">
+  <meta property="og:image" content="https://marieobando.github.io/portfoliomarie-3/pictures/img4.jpg">
+
+
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
