--- a/item-galeria/obra10.html
+++ b/item-galeria/obra10.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img8.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img8.jpg" class="img-fluid w-10" alt="Foto de obra 10 Soy collage y dibujo sobre papel retratos">
 
 
       </div>
