--- a/item-galeria/obra2.html
+++ b/item-galeria/obra2.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img5.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img5.jpg" class="img-fluid w-10" alt="Foto de obra 2 Taxi dibujo sobre papel">
 
 
       </div>
