--- a/item-galeria/obra3.html
+++ b/item-galeria/obra3.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img7.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img7.jpg" class="img-fluid w-10" alt="Foto de oobra 3 Look dibujo y collage sobre papel">
 
 
       </div>
