--- a/item-galeria/obra4.html
+++ b/item-galeria/obra4.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img6.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img6.jpg" class="img-fluid w-10" alt="Foto de obra 4 Iglesia dibujo grafito sobre papel">
 
 
       </div>
