--- a/item-galeria/obra5.html
+++ b/item-galeria/obra5.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img1.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img1.jpg" class="img-fluid w-10" alt="Foto de obra 5 Collage digital a partir de dibujo mujeres">
 
 
       </div>
