--- a/item-galeria/obra6.html
+++ b/item-galeria/obra6.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img3.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img3.jpg" class="img-fluid w-10" alt="Foto de obra Virus dibujo y collage en papel colores">
 
 
       </div>
