--- a/item-galeria/obra7.html
+++ b/item-galeria/obra7.html
@@ -95,7 +95,7 @@
 
             <div class="obraimage animate__animated animate__backInLeft">
 
-                <img src="../pictures/img12.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+                <img src="../pictures/img12.jpg" class="img-fluid w-10" alt="Foto de obra 7 dibujo Casa de Hacienda dibujo sobre papel">
 
 
             </div>
