--- a/item-galeria/obra8.html
+++ b/item-galeria/obra8.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img11.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img11.jpg" class="img-fluid w-10" alt="Foto de obra 8 Fabrica collage y dibujo en papel">
 
 
       </div>
