--- a/item-galeria/obra9.html
+++ b/item-galeria/obra9.html
@@ -95,7 +95,7 @@
 
       <div class="obraimage animate__animated animate__backInLeft">
 
-        <img src="../pictures/img13.jpg" class="img-fluid w-10" alt="Foto de tienda 1">
+        <img src="../pictures/img13.jpg" class="img-fluid w-10" alt="Foto de obra 9 dibujo sobre papel entrada de hotel viejo San Francisco Venezuela">
 
 
       </div>
