arreglo info text

--- a/info.html
+++ b/info.html
@@ -167,7 +167,7 @@
                 Al realizar una pieza, esto puede implicar a veces una diferenciación en el cuerpo de obras. El collage
                 se ha hecho presente en mi trabajo desde hace años, pienso que me permite expresar de manera más cercana
                 y fiel las imágenes que proyecto internamente, la complejidad y la extrañeza del uno mismo y lo otro, e
-                igualmente la conexión que subyace para mí en toda la experiencia particular de vida. El dibujo también
+                igualmente la conexión que subyace para mí en toda la experiencia particular de vida desde mi feminidad y humanidad. El dibujo también
                 ha pedido poco a poco mayor espacio e interactúa con el collage, lo complementa, lo completa, se opone a
                 él.
 
@@ -178,25 +178,24 @@
             <p>
 
                 Como mujer, siempre tuve la sensación de tener que realizar ciertos rituales, pasajes y tareas
-                específicas para proyectar una imagen que parece escrita en un gran guión, un gran acuerdo social, Cómo
-                es ser niña y cómo podía ser mujer, y cómo debe ser el pasaje entre un estado y el otro.
-                Cuando yo solo me preguntaba por Ser y lo que implicaba para mí esto me sentí increpada, avergonzada y
+                específicas para proyectar una imagen ya escrita en un gran guión, un gran acuerdo social... ¿ Cómo
+                es ser niña y cómo podía ser mujer?... Y cómo debe ser el pasaje entre esta y aquella.
+                Cuando solo me preguntaba por Ser y lo que implicaba para mí esto me sentí increpada, avergonzada y
                 asustada de sentirme distinta a lo que se esperaba de mí. Es así como pienso en los diversos rituales y
                 ceremonias que cada sociedad y cada cultura en particular construye respecto a la identidad de las
-                mujeres como una cárcel. Y es que no hay una sola forma de ser mujer ni hay un número limitado de roles
-                que debamos cumplir, no hay formularios que llenar; más allá del género asignado al nacer, debemos ser
-                lo que necesitemos ser para nosotras o nosotres.
+                mujeres, como una cárcel. Y es que no hay una sola forma de ser mujer ni hay un número limitado de roles
+                que debamos cumplir, no hay formularios que llenar.
 
             </p>
 
             <p>
 
-                Ante la mirada de un sistema que sí, es patriarcal y sexista, que controla nuestros deseos, nuestros
-                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y decirle basta, un
-                fuck you. Y este dibujo intenta expresar la indignación de sentirme esta niña atrapada por todos estos
-                parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos mujer. No, nunca fui
-                menos mujer, fui yo, me construí en mi ser cada día y aprendí a leer que todo lo que intenté ser lo
-                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron presente…
+                Ante la mirada de un sistema sexista, que controla nuestros deseos, nuestros
+                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y crear, mi muy personal
+                fuck you. Mi trabajo intenta expresar la indignación de sentirme atrapada por todos estos
+                parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos. No, nunca fui
+                menos mujer, fui yo, me construí y aprendí a leer que todo lo que intenté ser lo
+                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron presentes controlando nuestra identidad…
 
 
             </p>
