removi print section repetida arregle row extra link en el titulo de la pagina web para redireccionar a index

--- a/info.html
+++ b/info.html
@@ -6,11 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Marie Biografia Statement artista dedicada al collage, la pintura y la ilustracion. Chequea su trabajo y ponte en contacto con ella.">
+    <meta name="description"
+        content="Marie Biografia Statement artista dedicada al collage, la pintura y la ilustracion. Chequea su trabajo y ponte en contacto con ella.">
 
     <!-- META KEYWORDS 18 PALABRAS -->
 
-    <meta name="keywords" content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+    <meta name="keywords"
+        content="ARTE, ARGENTINA, VENEZUELA, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
 
 
     <!-- PROTOCOLO OPEN GRAPH -->
@@ -66,7 +68,7 @@
             <h1 class="animate__animated animate__fadeInRight">
 
 
-                MARIE OBANDO /
+                <a href="index.html">MARIE OBANDO</a>
 
 
 
@@ -167,7 +169,8 @@
                 Al realizar una pieza, esto puede implicar a veces una diferenciación en el cuerpo de obras. El collage
                 se ha hecho presente en mi trabajo desde hace años, pienso que me permite expresar de manera más cercana
                 y fiel las imágenes que proyecto internamente, la complejidad y la extrañeza del uno mismo y lo otro, e
-                igualmente la conexión que subyace para mí en toda la experiencia particular de vida desde mi feminidad y humanidad. El dibujo también
+                igualmente la conexión que subyace para mí en toda la experiencia particular de vida desde mi feminidad
+                y humanidad. El dibujo también
                 ha pedido poco a poco mayor espacio e interactúa con el collage, lo complementa, lo completa, se opone a
                 él.
 
@@ -191,11 +194,13 @@
             <p>
 
                 Ante la mirada de un sistema sexista, que controla nuestros deseos, nuestros
-                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y crear, mi muy personal
+                cuerpos y la forma en que deberíamos expresarnos, no puedo sino levantar mi mano y crear, mi muy
+                personal
                 fuck you. Mi trabajo intenta expresar la indignación de sentirme atrapada por todos estos
                 parámetros sexistas que solo socavaron mi confianza y me dijeron que era menos. No, nunca fui
                 menos mujer, fui yo, me construí y aprendí a leer que todo lo que intenté ser lo
-                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron presentes controlando nuestra identidad…
+                construyeron para mí quienes nunca me conocieron, y sin embargo, siempre estuvieron presentes
+                controlando nuestra identidad…
 
 
             </p>
@@ -207,19 +212,19 @@
 
         <div class="suscripcion">
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="content">
-                        <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
-                        <div class="input-group">
-                            <input type="email" class="form-control" placeholder="Ingresa tu email">
-                            <span class="input-group-btn">
-                                <button class="btn" type="submit">Suscribirme</button>
-                            </span>
-                        </div>
+
+            <div class="col-sm-12">
+                <div class="content">
+                    <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+                    <div class="input-group">
+                        <input type="email" class="form-control" placeholder="Ingresa tu email">
+                        <span class="input-group-btn">
+                            <button class="btn" type="submit">Suscribirme</button>
+                        </span>
                     </div>
                 </div>
             </div>
+
 
 
 
