--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio Marie es una artista venezolana que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
+    <meta name="description"
+        content="Portfolio Marie es una artista venezolana que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
 
     <!-- META KEYWORDS 18 PALABRAS minimo -->
-    <meta name="keywords" content="Arte, Argentina, Venezuela, ilustraciones, Concept, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+    <meta name="keywords"
+        content="Arte, Argentina, Venezuela, ilustraciones, Concept, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
 
     <!-- PROTOCOLO OPEN GRAPH -->
 
@@ -59,8 +61,10 @@
 
             <h1 class="section-nav index animate__animated animate__fadeInRight">
 
-                MARIE OBANDO
 
+                <a href="index.html">MARIE OBANDO</a>
+
+                
             </h1>
 
             <nav class="exteriornav navbar navbar-expand-lg bg-light">
@@ -117,7 +121,8 @@
     <section>
         <div>
             <marquee bgcolor="#FFFFFF" width="100%" scrolldelay="1" scrollamount="8" direction="left" loop="infinite">
-                MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO
+                MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO
+                MARIE OBANDO MARIE OBANDO MARIE OBANDO MARIE OBANDO
 
             </marquee>
         </div>
@@ -128,19 +133,20 @@
 
         <div class="suscripcion animate__animated animate__fadeIn">
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="content">
-                        <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+
+
+
+            <div class="col-sm-12">
+                <div class="content">
+                    <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
                     <div class="input-group">
-                         <input type="email" class="form-control" placeholder="Ingresa tu email">
-                         <span class="input-group-btn">
-                         <button class="btn" type="submit">Suscribirme</button>
-                         </span>
-                          </div>
+                        <input type="email" class="form-control" placeholder="Ingresa tu email">
+                        <span class="input-group-btn">
+                            <button class="btn" type="submit">Suscribirme</button>
+                        </span>
                     </div>
                 </div>
-                </div>
+            </div>
 
 
 
@@ -151,7 +157,7 @@
 
     </section>
 
-    
+
 
 
 
