--- a/proyectos.html
+++ b/proyectos.html
@@ -6,12 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <meta name="description" content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
+    <meta name="description"
+        content="Marie es una artista que se dedica al collage, la pintura y la ilustracion. En esta pagina podras encontrar su trabajo y ponerte en contacto con ella.">
 
     <!-- META KEYWORDS 18 PALABRAS -->
 
 
-    <meta name="keywords" content="Arte, Argentina, Venezuela, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
+    <meta name="keywords"
+        content="Arte, Argentina, Venezuela, ilustraciones, CONCEPT, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, contemporaneo, galeria, proyectos">
 
 
     <!-- PROTOCOLO OPEN GRAPH -->
@@ -24,7 +26,7 @@
 
 
 
-    
+
 
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -71,7 +73,7 @@
             <h1 class="animate__animated animate__fadeInRight">
 
 
-                MARIE OBANDO /
+                <a href="index.html">MARIE OBANDO</a>
 
 
 
@@ -118,7 +120,7 @@
 
     </section>
 
-    <section>
+    <section class="proyectoimgs">
 
 
 
@@ -146,26 +148,26 @@
             </div>
         </div>
 
-        
+
     </section>
 
     <section>
 
         <div class="suscripcion">
 
-            <div class="row">
-                <div class="col-sm-12">
-                    <div class="content">
-                        <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+
+            <div class="col-sm-12">
+                <div class="content">
+                    <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
                     <div class="input-group">
-                         <input type="email" class="form-control" placeholder="Ingresa tu email">
-                         <span class="input-group-btn">
-                         <button class="btn" type="submit">Suscribirme</button>
-                         </span>
-                          </div>
+                        <input type="email" class="form-control" placeholder="Ingresa tu email">
+                        <span class="input-group-btn">
+                            <button class="btn" type="submit">Suscribirme</button>
+                        </span>
                     </div>
                 </div>
-                </div>
+            </div>
+
 
 
 
