--- a/tienda.html
+++ b/tienda.html
@@ -6,11 +6,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <meta name="description" content="Entra en la tienda y chequea los prints y originales de arte e ilustraciones collage, la pintura.">
+  <meta name="description"
+    content="Entra en la tienda y chequea los prints y originales de arte e ilustraciones collage, la pintura.">
 
   <!-- META KEYWORDS 18 PALABRAS -->
 
-  <meta name="keywords" content="arte, Argentina, Venezuela, ilustraciones, Tienda, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, compra, pagos, obras">
+  <meta name="keywords"
+    content="arte, Argentina, Venezuela, ilustraciones, Tienda, collage, pintura, dibujo, tinta, acuarela, print, original, creativo, retrato, ilustrador, artista, compra, pagos, obras">
 
 
   <!-- PROTOCOLO OPEN GRAPH -->
@@ -69,7 +71,7 @@
       <h1 class="animate__animated animate__fadeInRight">
 
 
-        MARIE OBANDO /
+        <a href="index.html">MARIE OBANDO</a>
 
 
 
@@ -116,18 +118,7 @@
 
   </section>
 
-  <section>
-    <ul class="storesubcontent">
-      <li class="storesubcontent">
-        <a href="print.html">Prints</a>
-
-      </li>
-      <!--
-      <li class="storesubcontent">
-        <a href="original.html">All</a>
-      </li> -->
-    </ul>
-  </section>
+  
 
 
   <section>
@@ -198,19 +189,19 @@
 
     <div class="suscripcion">
 
-      <div class="row">
-        <div class="col-sm-12">
-          <div class="content">
-            <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
-            <div class="input-group">
-              <input type="email" class="form-control" placeholder="Ingresa tu email">
-              <span class="input-group-btn">
-                <button class="btn" type="submit">Suscribirme</button>
-              </span>
-            </div>
+
+      <div class="col-sm-12">
+        <div class="content">
+          <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
+          <div class="input-group">
+            <input type="email" class="form-control" placeholder="Ingresa tu email">
+            <span class="input-group-btn">
+              <button class="btn" type="submit">Suscribirme</button>
+            </span>
           </div>
         </div>
       </div>
+
 
 
 
