construccion page tamano h1 general margin de suscripcion

--- a/html-tienda-items/compra3.html
+++ b/html-tienda-items/compra3.html
@@ -136,7 +136,7 @@
 
       <div>
 
-        <a class="btn btn-danger" href="#" role="button">Comprar</a>
+        <a class="btn btn-danger" href="enconstruccionpage.html" role="button">Comprar</a>
 
       </div>
 
