--- a/html-tienda-items/compra2.html
+++ b/html-tienda-items/compra2.html
@@ -134,7 +134,7 @@
 
       <div>
 
-        <a class="btn btn-danger" href="#" role="button">Comprar</a>
+        <a class="btn btn-danger" href="enconstruccionpage.html" role="button">Comprar</a>
 
       </div>
 
