--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
 
-            <div class="col-sm-12">
+            <div class="col-sm-12 m-3">
                 <div class="content">
                     <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
                     <div class="input-group">
