cambio de fonts headers, media queries fixes cambio bg image

--- a/contacto.html
+++ b/contacto.html
@@ -118,7 +118,7 @@
 
     </section>
 
-    <section class="bloquecontact mb-4">
+    <section class="bloquecontact m-4">
 
         <!--Section Header del contacto-->
         <h2 class="h1-responsive font-weight-bold text-center my-4">Hola, Contáctame</h2>
@@ -224,7 +224,7 @@
         <div class="suscripcion">
 
 
-            <div class="col-sm-12 m-3">
+            <div class="col-sm-12 mr-0">
                 <div class="content">
                     <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
                     <div class="input-group">
