--- a/info.html
+++ b/info.html
@@ -125,6 +125,7 @@
 
         <div class="containerfoto">
             <img src="pictures/infoimg.jpeg" class="img-fluid w-30" alt="Foto de perfil Marie Obando">
+           
         </div>
 
         <div class="infotext animate__animated animate__zoomIn">
@@ -213,7 +214,7 @@
         <div class="suscripcion">
 
 
-            <div class="col-sm-12 m-3">
+            <div class="col-sm-12 mr-0">
                 <div class="content">
                     <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
                     <div class="input-group">
