--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
                 <a href="index.html">MARIE OBANDO</a>
 
-                
+
             </h1>
 
             <nav class="exteriornav navbar navbar-expand-lg bg-light">
@@ -108,14 +108,21 @@
 
     </section>
 
-    <section class="picturecoverindex">
+    <section class="flex-center">
 
-        <div>
-            <img src="pictures/imgindex2.png" class="img-fluid animate__animated animate__zoomIn"
-                alt="imagen cover index collage mujeres caminando">
+
+        <div id="fondoindex" class="flex-center">
+
+            <h2>ILLUSTRATION</h2>
+
         </div>
 
     </section>
+
+
+    <!--<img src="pictures/imgindex2.png" class="w-100 animate__animated animate__zoomIn"
+                alt="imagen cover index collage mujeres caminando" />
+-->
 
 
     <section>
@@ -136,7 +143,7 @@
 
 
 
-            <div class="col-sm-12 m-3">
+            <div class="col-sm-12 mr-0">
                 <div class="content">
                     <h2>Suscríbete para recibir noticias sobre mis proyectos</h2>
                     <div class="input-group">
